validation des ficher

--- a/service.html
+++ b/service.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Contactez nous:</h2>
-    <ul>
-        <li>email</li>
-        <li>phone</li>
-    </ul>
+    <h1>hello customer</h1>
 </body>
-</html>`
+</html>
